# minecraft-server-list

./: .gitignore  api.tyml
backend/: Cargo.toml  servers.toml  servers.tyml
backend/api/: Cargo.toml
backend/api/src/: lib.rs  types.rs
backend/src/: config.rs  log.rs  main.rs  minecraft.rs  server.rs  service.rs
frontend/MinecraftServerList/: build.gradle.kts  settings.gradle.kts
frontend/MinecraftServerList/api/: build.gradle.kts
frontend/MinecraftServerList/api/src/main/kotlin/: Client.kt
frontend/MinecraftServerList/src/main/kotlin/com/github/bea4dev/minecraftServerList/: EventListener.kt  MinecraftServerList.kt  PluginConfig.kt  ServerListGUI.kt  ServerListService.kt
frontend/MinecraftServerList/src/main/resources/: plugin.yml
