# !tyml @cargo/Cargo

[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
api = { path = "./api" }
tokio = { version = "1", features = [ "full" ] }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
        "fmt",
        "env-filter",
        "json",
        "time",
        "local-time"
    ] }
tracing-appender = "0.2"
tracing-log = "0.2"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
anyhow = "1"
toml = "0.8"
futures = "0.3"
hickory-resolver = { version = "0.24", features = [ "tokio-runtime" ] }
